--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -39,9 +39,10 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
-    "monaco-editor": "^0.38.0",
-    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-editor": "^0.30.0",
+    "monaco-editor-webpack-plugin": "^6.0.0",
     "monaco-languageclient": "^5.0.1",
+    "monaco-yaml": "^4.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.12",
