--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/AddMethodInParameter.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/AddMethodInParameter.yaml
@@ -26,3 +26,21 @@ info:
     - "https://cwe.mitre.org/data/definitions/285.html"
     - "https://fanoframework.github.io/security/http-verb-tunnelling/#:~:text=What%20is%20it%3F,allows%20GET%20and%20POST%20request.&text=Alternatively%2C%20you%20can%20also%20use,body%20parameter%20_method%20like%20so."
 api_selection_filters:
+  response_code:
+    gte: 200
+    lt: 300
+  method:
+    neq: POST
+execute:
+  type: single
+  requests:
+    - req:
+      - add_query_param:
+          method: POST
+validate:
+  response_code:
+    gte: 200
+    lt: 300
+  response_payload:
+    percentage_match:
+      lt: 30
