--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
@@ -29,4 +29,15 @@ info:
     - "https://cwe.mitre.org/data/definitions/285.html"
     - "https://cwe.mitre.org/data/definitions/639.html"
 api_selection_filters:
-  #isPrivate: true
+  auth:
+    authenticated: true
+  response_code:
+    gte: 200
+    lt: 300
+  private_variable_context:
+    gt: 0
+execute:
+  type: single
+  requests:
+    - req:
+        - modify_header: true
