--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
@@ -28,4 +28,19 @@ info:
     - "https://redhuntlabs.com/a-practical-guide-to-attack-jwt-json-web-token"
     - "https://portswigger.net/web-security/jwt/lab-jwt-authentication-bypass-via-jku-header-injection"
 api_selection_filters:
-  #authenticated: true
+  auth:
+    authenticated: true
+  response_code:
+    gte: 200
+    lt: 300
+  request_headers:
+    contains_jwt: true
+execute:
+  type: single
+  requests:
+    - req:
+        replace_auth_headers: ${auth_context.jku_added_token}
+validate:
+  response_code:
+    gte: 200
+    lt: 300
