--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
@@ -26,4 +26,19 @@ info:
     - "https://redhuntlabs.com/a-practical-guide-to-attack-jwt-json-web-token"
     - "https://portswigger.net/kb/issues/00200900_jwt-signature-not-verified#:~:text=Description%3A%20JWT%20signature%20not%20verified&text=However%2C%20some%20servers%20fail%20to,privileges%20or%20impersonate%20other%20users."
 api_selection_filters:
-  #authenticated: true
+  auth:
+    authenticated: true
+  response_code:
+    gte: 200
+    lt: 300
+  request_headers:
+    contains_jwt: true
+execute:
+  type: single
+  requests:
+    - req:
+        replace_auth_headers: ${auth_context.invalid_signature_token}
+validate:
+  response_code:
+    gte: 200
+    lt: 300
