--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
@@ -25,4 +25,20 @@ info:
     - "https://redhuntlabs.com/a-practical-guide-to-attack-jwt-json-web-token"
     - "https://portswigger.net/kb/issues/00200901_jwt-none-algorithm-supported"
 api_selection_filters:
-  #authenticated: true
+  auth:
+    authenticated: true
+  response_code:
+    gte: 200
+    lt: 300
+  request_headers:
+    contains_jwt: true
+execute:
+  type: single
+  requests:
+    - req:
+        replace_auth_headers: ${auth_context.none_algo_token}
+validate:
+  response_code:
+    gte: 200
+    lt: 300
+
