--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ParameterPollution.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ParameterPollution.yaml
@@ -24,3 +24,24 @@ info:
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa1-broken-object-level-authorization.md"
     - "https://cwe.mitre.org/data/definitions/284.html"
 api_selection_filters:
+  response_code:
+    gte: 200
+    lt: 300
+  private_variable_context:
+    gt: 0
+    extract: private_var
+execute:
+  type: single
+  requests:
+    - req:
+        - add_query_param:
+            private_var.key: ${private_var.value}
+validate:
+  response_code:
+    gte: 200
+    lt: 300
+  response_payload:
+    percentage_match:
+      lt: 80
+    length:
+      gt: 0
