--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/NoAuth.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/NoAuth.yaml
@@ -33,7 +33,7 @@ execute:
   type: single
   requests:
     - req:
-        - remove_auth_headers: true
+        - remove_auth_header: true
 
 validate:
   response_code:
