--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
@@ -41,3 +41,12 @@ execute:
   requests:
     - req:
         - modify_header: true
+validate:
+  response_code:
+    gte: 200
+    lt: 300
+  response_payload:
+    length:
+      gt: 0
+    percentage_match:
+      gt: 90
