--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
@@ -39,7 +39,7 @@ execute:
   type: single
   requests:
     - req:
-        replace_auth_headers: ${auth_context.jku_added_token}
+        replace_auth_header: ${auth_context.jku_added_token}
 validate:
   response_code:
     gte: 200
