--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
@@ -25,14 +25,16 @@ info:
   references:
     - "https://redhuntlabs.com/a-practical-guide-to-attack-jwt-json-web-token"
     - "https://portswigger.net/kb/issues/00200900_jwt-signature-not-verified#:~:text=Description%3A%20JWT%20signature%20not%20verified&text=However%2C%20some%20servers%20fail%20to,privileges%20or%20impersonate%20other%20users."
-api_selection_filters:
-  auth:
+auth:
     authenticated: true
+api_selection_filters:
   response_code:
     gte: 200
     lt: 300
   request_headers:
-    contains_jwt: true
+    for_one:
+      value:
+        contains_jwt: true
 execute:
   type: single
   requests:
