--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
@@ -24,14 +24,16 @@ info:
   references:
     - "https://redhuntlabs.com/a-practical-guide-to-attack-jwt-json-web-token"
     - "https://portswigger.net/kb/issues/00200901_jwt-none-algorithm-supported"
-api_selection_filters:
-  auth:
+auth:
     authenticated: true
+api_selection_filters:
   response_code:
     gte: 200
     lt: 300
   request_headers:
-    contains_jwt: true
+    for_one:
+      value:
+        contains_jwt: true
 execute:
   type: single
   requests:
