percentage body match arg fix

--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ChangeMethodToPut.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ChangeMethodToPut.yaml
@@ -28,7 +28,7 @@ execute:
   type: single
   requests:
     - req:
-        - modify_method: PUt
+        - modify_method: PUT
 validate:
   response_code:
     gte: 200
