--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
@@ -29,7 +29,7 @@ info:
     - "https://cwe.mitre.org/data/definitions/285.html"
     - "https://cwe.mitre.org/data/definitions/639.html"
 auth:
-    authenticated: true
+  authenticated: true
 api_selection_filters:
   response_code:
     gte: 200
@@ -40,7 +40,7 @@ execute:
   type: single
   requests:
     - req:
-        - modify_header: true
+      - replace_auth_header: true
 validate:
   response_code:
     gte: 200
