add wordlist support

--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeAdmin.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeAdmin.yaml
@@ -52,6 +52,9 @@ execute:
             admin_key: true
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     for_one:
       key:
