--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeRole.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeRole.yaml
@@ -58,6 +58,9 @@ execute:
             role_context.key: ${role_context.value}
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     for_one:
       key:
