--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
@@ -64,6 +64,9 @@ execute:
             url_key: http://⑯⑨。②⑤④。⑯⑨｡②⑤④/latest/meta-data/local-ipv4
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "ami-id"
