--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnCSVUpload.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnCSVUpload.yaml
@@ -63,6 +63,9 @@ execute:
             csv_key: https://ssrf.localdomain.pw/csv-without-body/301-http-169.254.169.254:80-.c.csv
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "ami-id"
