--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnLocalhostEncoded.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnLocalhostEncoded.yaml
@@ -60,6 +60,9 @@ execute:
             url_key: http://①②⑦。⓪⓪⓪。⓪⓪①/admin
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "admin"
