--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnXMLUpload.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnXMLUpload.yaml
@@ -62,6 +62,9 @@ execute:
             csv_key: https://ssrf.localdomain.pw/xml-without-body-md/301-http-.x.xml
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "ami-id"
