--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentCreateAdminUser.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentCreateAdminUser.yaml
@@ -56,5 +56,8 @@ execute:
           role: admin
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either: admin
