--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAwsMetaEndpoint.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAwsMetaEndpoint.yaml
@@ -63,6 +63,9 @@ execute:
           url_key: http://169.254.169.254/latest/meta-data/local-ipv4
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "ami-id"
