--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnFiles.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnFiles.yaml
@@ -60,5 +60,8 @@ execute:
             file_key: ///etc/passwd
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     regex: "root:.*:0:0:"
