--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnPDFUpload.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnPDFUpload.yaml
@@ -62,6 +62,9 @@ execute:
             csv_key: https://ssrf.localdomain.pw/pdf-without-body/301-http-169.254.169.254:80-.p.pdf
 
 validate:
+  response_code:
+    gte: 200
+    lt: 300
   response_payload:
     contains_either:
       - "ami-id"
