--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
@@ -1,6 +1,6 @@
 id: REPLACE_AUTH_TOKEN
 info:
-  name: REPLACE_AUTH_TOKEN
+  name: BOLA by changing auth token
   description: "Attacker can access resources of any user by changing the auth token in request."
   details: >
             "The endpoint appears to be vulnerable to broken object level authorization attack. The original request
