--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AddUserId.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AddUserId.yaml
@@ -24,6 +24,8 @@ info:
     - "https://cwe.mitre.org/data/definitions/284.html"
     - "https://cwe.mitre.org/data/definitions/285.html"
     - "https://cwe.mitre.org/data/definitions/639.html"
+auth:
+  authenticated: true
 api_selection_filters:
   response_code:
     gte: 200
