--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ParameterPollution.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ParameterPollution.yaml
@@ -23,6 +23,8 @@ info:
     - "https://www.akto.io/blog/what-is-broken-object-level-authorization-bola"
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa1-broken-object-level-authorization.md"
     - "https://cwe.mitre.org/data/definitions/284.html"
+auth:
+  authenticated: true
 api_selection_filters:
   response_code:
     gte: 200
