--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/TraceMethodTest.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/TraceMethodTest.yaml
@@ -1,16 +1,14 @@
 id: TRACE_METHOD_TEST
 info:
-  name: Change method to TRACE
-  description: "Attacker can access resources of any user by changing the auth token in request."
+  name: TRACE Method Vulnerability Test
+  description: "The endpoint appears to accept requests with TRACE HTTP Method. The original request was replayed by replacing the method value with TRACE. The application responded with 2XX success code."
   details: >
-            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request
-            was replayed with attacker's auth token. The server responded with 2XX success codes and greater
-            than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private
-            resources in request payload.<br>"
-            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to
-             validate that one user can only access objects that they should have access to.
-            Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
-  impact: "Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
+            "The endpoint appears to be vulnerable to unsafe HTTP methods attack. The original request was 
+            replayed by replacing the method value with TRACE. The server responded with 2XX success code.
+            "<b>Background:</b> The TRACE method is used to invoke a remote, application-layer loop- back of 
+            the request message. TRACE allows the client to see what is being received at the other end of the 
+            request chain and use that data for testing or diagnostic information.
+  impact: "TRACE method can be used for debugging purposes. It repeats the content of a request, and an attacker could steal credentials by using a client-side attack."
   category:
     name: UHM
     shortName: UHM
@@ -22,12 +20,8 @@ info:
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://www.akto.io/blog/bola-exploitation-using-unauthorized-uuid-on-api-endpoint"
-    - "https://www.akto.io/blog/what-is-broken-object-level-authorization-bola"
-    - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa1-broken-object-level-authorization.md"
-    - "https://cwe.mitre.org/data/definitions/284.html"
-    - "https://cwe.mitre.org/data/definitions/285.html"
-    - "https://cwe.mitre.org/data/definitions/639.html"
+    - "https://www.onwebsecurity.com/security/unsafe-http-methods.html"
+    - "https://hackerone.com/reports/109054"
 
 api_selection_filters:
   response_code:
