--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/UnwantedResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/UnwantedResponseHeaders.yaml
@@ -1,16 +1,13 @@
 id: UNWANTED_RESPONSE_HEADERS
 info:
   name: Unwanted Response Headers
-  description: "Attacker can access resources of any user by changing the auth token in request."
+  description: "The response contains headers which might leak sensitive information."
   details: >
-            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request
-            was replayed with attacker's auth token. The server responded with 2XX success codes and greater
-            than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private
-            resources in request payload.<br>"
-            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to
-             validate that one user can only access objects that they should have access to.
-            Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
-  impact: "Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
+            "Some headers contain data pertaining to server information like server version or details about 
+            hosting and deployment. This data makes your site easier to attack. Some other headers can also be 
+            used to override the default behaviour of the application and give debug information or skip 
+            authentication."
+  impact: "This information can be used to facilitate more sophisticated attacks on your application."
   category:
     name: MHH
     shortName: MHH
@@ -22,12 +19,9 @@ info:
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://www.akto.io/blog/bola-exploitation-using-unauthorized-uuid-on-api-endpoint"
-    - "https://www.akto.io/blog/what-is-broken-object-level-authorization-bola"
-    - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa1-broken-object-level-authorization.md"
-    - "https://cwe.mitre.org/data/definitions/284.html"
-    - "https://cwe.mitre.org/data/definitions/285.html"
-    - "https://cwe.mitre.org/data/definitions/639.html"
+    - "https://www.fastly.com/blog/headers-we-dont-want"
+    - "https://portswigger.net/web-security/host-header/exploiting"
+    - "https://blog.yeswehack.com/yeswerhackers/http-header-exploitation/"
 
 api_selection_filters:
   response_code:
