--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidUrlInput.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidUrlInput.yaml
@@ -39,12 +39,12 @@ api_selection_filters:
     - request_payload:
         for_one:
           key:
-            contains_either: mess
+            contains_either: file
             extract: keyVar
     - query_param:
         for_one:
           key:
-            contains_either: mess
+            contains_either: file
             extract: keyVar
 
 execute:
