--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ContentTypeHeaderMissing.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ContentTypeHeaderMissing.yaml
@@ -1,16 +1,14 @@
 id: CONTENT_TYPE_HEADER_MISSING
 info:
   name: Content Type Header Missing
-  description: "Attacker can access resources of any user by changing the auth token in request."
+  description: "This vulnerability can enable attackers to inject malicious code into the application or cause it to malfunction."
   details: >
-            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request
-            was replayed with attacker's auth token. The server responded with 2XX success codes and greater
-            than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private
-            resources in request payload.<br>"
-            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to
-             validate that one user can only access objects that they should have access to.
-            Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
-  impact: "Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
+            "The endpoint appears to be have Misconfigured HTTP Headers. The original request
+            was replayed without any modifications. The server responded with 2XX success codes and the
+            response headers didn't contain Content-Type header"
+            "<b>Background:</b> The Content-Type header specifies the type of data contained in the request or
+            response body, allowing the receiving party to interpret and handle the data correctly."
+  impact: "When the Content-Type header is missing, it can lead to various security risks, data integrity issues and possible DOS attacks"
   category:
     name: MHH
     shortName: MHH
