fix must contain header validate

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
@@ -47,4 +47,16 @@ validate:
     for_one:
       key:
         not_contains_either:
+          - Cache-Control
+          - Clear-Site-Data
+          - Content-Security-Policy
+          - Cross-Origin-Embedder-Policy
+          - Cross-Origin-Opener-Policy
+          - Cross-Origin-Resource-Policy
+          - Permissions-Policy
+          - Pragma
+          - Referrer-Policy
+          - Strict-Transport-Security
+          - X-Content-Type-Options
           - X-Frame-Options
+          - X-Permitted-Cross-Domain-Policies
