minor template fixes

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoUrlExposed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoUrlExposed.yaml
@@ -44,4 +44,4 @@ execute:
 
 validate:
   response_payload:
-    contains_either: "Unexpected path"
+    contains_either: "Django tried these url patterns"
