--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
@@ -46,7 +46,7 @@ validate:
   response_headers:
     for_one:
       key:
-        not_contains_either:
+        contains_all:
           - Cache-Control
           - Clear-Site-Data
           - Content-Security-Policy
