--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NotActive.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NotActive.yaml
@@ -1,4 +1,4 @@
-id: ADD_USER_ID
+id: NOT_ACTIVE
 info:
   name: "IDOR by adding user id in query params"
   description: "Attacker can access resources of any user by adding user_id in URL."
@@ -51,3 +51,4 @@ validate:
 metadata:
   minimum_akto_version: 1.29.1
   minimum_onprem_version: 1.30.6
+  is_active: false
