--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/VersionGreater.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/VersionGreater.yaml
@@ -1,4 +1,4 @@
-id: ADD_USER_ID
+id: VERSION_GREATER
 info:
   name: "IDOR by adding user id in query params"
   description: "Attacker can access resources of any user by adding user_id in URL."
@@ -49,5 +49,5 @@ validate:
     length:
       gt: 0
 metadata:
-  minimum_akto_version: 1.29.1
-  minimum_onprem_version: 1.30.6
+  minimum_akto_version: 1.29.2
+  minimum_onprem_version: 1.30.7
