--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/VersionSame.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/VersionSame.yaml
@@ -49,5 +49,5 @@ validate:
     length:
       gt: 0
 metadata:
-  minimum_akto_version: 1.29.1
-  minimum_onprem_version: 1.30.6
+  min_akto_version: 1.29.1
+  min_onprem_version: 1.30.6
