--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/Test.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/Test.yaml
@@ -1,6 +1,6 @@
 id: Test
 info:
-  name: "Test"
+  name: "Test - Update"
   description: "Attacker can access resources of any user by adding user_id in URL."
   details: >
     "The endpoint appears to be vulnerable to broken object level authorization attack. The original request was replayed by adding other user's user id in query params.
