add versions to templates

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeRole.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeRole.yaml
@@ -67,3 +67,6 @@ validate:
         eq: ${role_key}
       value:
         eq: ${role_context.value}
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
