--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentCreateAdminUser.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentCreateAdminUser.yaml
@@ -61,3 +61,6 @@ validate:
     lt: 300
   response_payload:
     contains_either: admin
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
