--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
@@ -65,3 +65,6 @@ validate:
       - "ami-manifest-path"
       - "block-device-mapping"
       - "instance-action"
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
