--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnFiles.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnFiles.yaml
@@ -57,3 +57,6 @@ validate:
     lt: 300
   response_payload:
     regex: "root:.*:0:0:"
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
