--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnLocalhost.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnLocalhost.yaml
@@ -57,3 +57,6 @@ validate:
   response_payload:
     contains_either:
       - "admin"
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
