--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeAdmin.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeAdmin.yaml
@@ -61,3 +61,6 @@ validate:
         eq: ${admin_key}
       value:
         eq: true
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
