--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PortScanningViaSSRF.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PortScanningViaSSRF.yaml
@@ -68,3 +68,6 @@ validate:
       - "(?i)refused"
       - "(?i)timeout"
       - "MongoDB"
+metadata:
+  minAktoVersion: 1.29.1
+  minOnpremVersion: 1.30.8
