--- a/.github/workflows/discord-release-msg.yml
+++ b/.github/workflows/discord-release-msg.yml
@@ -4,7 +4,7 @@ name: Release messages to discord announcement channel
 on: 
   release:
     types:
-      - created
+      - published
 
 jobs:
   run_main:
