--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OpenRedirect.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OpenRedirect.yaml
@@ -50,11 +50,11 @@ execute:
   requests:
     - req:
       - modify_query_param:
-          payload_location_key: evil.com/?p=${payload_location_value}
+          payload_location_key: http://evil.com/?p=${payload_location_value}
       - modify_body_param:
-          payload_location_key: evil.com/?p=${payload_location_value}
+          payload_location_key: http://evil.com/?p=${payload_location_value}
       - modify_header:
-          payload_location_key: evil.com/?p=${payload_location_value}
+          payload_location_key: http://evil.com/?p=${payload_location_value}
 
 
 validate:
