--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidFileInput.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidFileInput.yaml
@@ -13,7 +13,7 @@ info:
   impact: "This information can be used to facilitate more sophisticated attacks on your application"
   category:
     name: VEM
-    shortName: VEM
+    shortName: Verbose Error Messages
     displayName: Verbose Error Messages (VEM)
   subCategory: INVALID_FILE_INPUT
   severity: LOW
