--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
@@ -13,7 +13,7 @@ info:
   impact: "This information can be used to facilitate more sophisticated attacks on your application."
   category:
     name: MHH
-    shortName: MHH
+    shortName: Misconfigured HTTP Headers
     displayName: Misconfigured HTTP Headers (MHH)
   subCategory: MUST_CONTAIN_RESPONSE_HEADERS
   severity: LOW
