fixed template syntax errors

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AppendXSS.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AppendXSS.yaml
@@ -35,6 +35,7 @@ api_selection_filters:
   query_param:
     for_one:
       key:
+        regex: .*
         extract: query_param_key
       value:
         extract: query_param_val
