--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ContentTypeHeaderMissing.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ContentTypeHeaderMissing.yaml
@@ -47,4 +47,4 @@ validate:
   response_headers:
     for_one:
       key:
-        not_contains: Content-Type
+        not_contains_either: Content-Type
