--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeAccount.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MassAssignmentChangeAccount.yaml
@@ -44,7 +44,7 @@ api_selection_filters:
   request_payload:
     for_one:
       key:
-        not_contains: ${account_key}
+        not_contains_either: ${account_key}
 
   param_context:
     param: ${account_key}
