--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/BypassCaptchaUsingHeader.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/BypassCaptchaUsingHeader.yaml
@@ -29,15 +29,15 @@ api_selection_filters:
     - request_headers:
         for_one:
           key:
-            contains: captcha
+            contains_either: captcha
     - request_payload:
         for_one:
           key:
-            contains: captcha
+            contains_either: captcha
     - query_param:
         for_one:
           key:
-            contains: captcha
+            contains_either: captcha
 
 execute:
   type: single
