--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -64,7 +64,7 @@
         <filter-name>RateLimitFilter</filter-name>
         <url-pattern>/auth/login</url-pattern>
         <url-pattern>/api/inviteUsers</url-pattern>
-        <url-pattern>/tools/publicApi</url-pattern>
+        <url-pattern>/tools/*</url-pattern>
     </filter-mapping>
 
 
